fixed navbar overflow issue and not closing on click issue

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,6 +6,10 @@
   html {
     font-family: 'Urbanist', sans-serif;
   }
+  html,
+  body {
+    overflow-x: hidden;
+  }
 }
 
 @layer components {
